Mon Oct  8 14:46:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (appendNeighboursTri): Do
	not filter out mesh.outerVertex so that current check can also
	prevent removing a non-boundary edge for which both endpoints are
	on boundary.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (canCollapse): Fix
	method to also work for non-manifold meshes.

Sat Oct  6 21:21:08 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (collapse): Fix edge
	collapse for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: New canCollapseEdge(),
	edgeCollapse(), vertexSplit() and edgeSwap() methods.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Restrict access,
	algorithms must now use methods added just above in Mesh.

Thu Oct  4 11:05:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: New fanIterator()
	method for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (find): Fix for
	non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix for
	non-manifold meshes with HalfEdge adjacency relations.

Wed Oct  3 16:54:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (collapse): Throw
	IllegalArgumentException if edge is outer.  Caller must call this
	method on symmetric edge instead, but this is not done automatically
	because caller could be confused by collapse() return value.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (canCollapse):
	In order to be consistent with the change just above, returns false
	if edge is outer.